--- a/app/app.html
+++ b/app/app.html
@@ -16,7 +16,7 @@
       </button>
       <button menuClose ion-item>
         <ion-icon item-left name="cart"></ion-icon>
-        Shop Rates
+        Shop-Rates
       </button>
       <ion-list-header>Account</ion-list-header>
       <button menuClose ion-item >
